[Fix] Profile - too much padding

--- a/client/src/app/profile/profile.component.scss
+++ b/client/src/app/profile/profile.component.scss
@@ -34,7 +34,7 @@
 
 @media screen and (min-width: 768px) {
   .profile-container {
-    padding: 90px 16px 240px;
+    padding: 48px 16px 240px;
     .form-container {
       padding: 36px;
       border: 1px solid #ccc;
